# pgtree

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  pgtree.plugin.bash  pgtree.plugin.ksh  pgtree.plugin.zsh  pgtree.py  pyproject.toml  setup.py
.github/workflows/: codecov.yml  python-publish.yml  pythons-tests.yml  release.yml
pgtree/: __init__.py  _version.py  pgtree.py
tests/: test_pgtree.py
